--- a/blocks/order/order.css
+++ b/blocks/order/order.css
@@ -86,10 +86,21 @@
         }
 
         .product-listing {
+            box-sizing: border-box;
             display: grid;
             gap: 1.6rem;
             grid-template-columns: repeat(9, minmax(0, 1fr));
             font-family: var(--soehne);
+            visibility: hidden;
+            opacity: 0;
+            height: 0;
+            transition: all 1s ease-in-out;
+
+            &.active {
+                height: auto;
+                opacity: 1;
+                visibility: visible;
+            }
 
             .name-description,
             .attributes,
@@ -152,10 +163,13 @@
                 display: flex;
             
                 .add-to-cart-button {
+                    background-color: transparent;
+                    border: none;
                     color: var(--orange);
                     font-family: var(--soehne);
                     font-size: 1.6rem;
                     opacity: 1;
+                    padding: 0;
                     pointer-events: all;
                     text-decoration: none;
                     text-transform: lowercase;
