--- a/blocks/intro-text/intro-text.css
+++ b/blocks/intro-text/intro-text.css
@@ -17,3 +17,12 @@
         }
     }
 }
+
+@media screen and (max-width: 1023px) {
+    .intro-text {
+        .sidebar-intro,
+        .standard-intro {
+            grid-column: auto / span 12 !important;
+        }
+    }
+}
