--- a/blocks/sidebar-intro/sidebar-intro.css
+++ b/blocks/sidebar-intro/sidebar-intro.css
@@ -16,3 +16,9 @@
         font-size: 32px;
     }
 }
+
+@media screen and (max-width: 1023px) {
+    .sidebar-intro {
+        grid-column: auto / span 12 !important;
+    }
+}
