--- a/blocks/standard-intro/standard-intro.css
+++ b/blocks/standard-intro/standard-intro.css
@@ -30,3 +30,9 @@
         }
     }
 }
+
+@media screen and (max-width: 1023px) {
+    .standard-intro {
+        grid-column: auto / span 12 !important;
+    }
+}
